[SPARK-47614][CORE] Rename `JavaModuleOptions` to `JVMRuntimeOptions`